--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,100 @@
   font-size: large;
   margin-top: 20px;
 }
+
+/* .input-location {
+  width: 100%;
+  border: 2px solid rgb(0, 0, 0);
+  padding: .5rem;
+  border-radius: .5rem;
+  text-align: start;
+
+}
+
+.input-location::placeholder {
+  text-align: start;
+  padding: 2rem;
+  color: rgba(0, 0, 0, 0.856);
+} */
+.input-location {
+  all: unset;
+  color: rgb(0, 0, 0);
+  border: 2px solid black;
+  width: 80%;
+  text-align: left;
+  padding: .5rem 0;
+  border-left: none;
+  border-radius: .5rem;
+
+}
+
+.input-location::placeholder {
+  color: black;
+  text-align: left;
+  padding: 2rem;
+}
+
+/* .search-body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
+  gap: 2rem;
+  margin: 4rem 0;
+  /* align-items: center; */
+  justify-content: center;
+
+}
+
+.cards>div {
+  height: 220px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  border-radius: .5rem;
+  border: 2px solid gray;
+}
+
+.card-heading {
+  font-size: 32px;
+  border-top-left-radius: .35rem;
+  border-top-right-radius: .35rem;
+  font-weight: 600;
+
+}
+
+.card-name {
+  font-size: 2.5rem;
+}
+
+.card-concentration,
+.card-aqi {
+  font-size: 1.2rem;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  border: 2px solid black;
+  padding: .5rem 0;
+  padding-left: 1rem;
+  height: 56px;
+  border-right: none;
+  border-radius: .5rem;
+}
+
+.faq-heading {
+  font-size: 2.5rem;
+}
