--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,10 @@
 .main2 {
   overflow: auto;
 } */
+.second {
+  padding: 2rem;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -183,4 +187,8 @@
 
 .faq-heading {
   font-size: 2.5rem;
+}
+
+::placeholder {
+  color: black;
 }
